k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-web
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-web
  template:
    metadata:
      labels:
        app: ecommerce-web
    spec:
      containers:
        - name: ecommerce-web
          image: 188382150773.dkr.ecr.ap-south-1.amazonaws.com/jyotsna/ecommerce:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
