k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: 188382150773.dkr.ecr.ap-south-1.amazonaws.com/jyotsna/ecommerce:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
