k8s/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: ecommerce
spec:
  selector:
    app: login-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
