k8s/sorry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry-service
  namespace: ecommerce
spec:
  selector:
    app: sorry-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
