k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:188382150773:certificate/e0b565d6-d164-4753-a6a5-87bd6c8b40ea
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - http:
        paths:
          - path: /sorry
            pathType: Prefix
            backend:
              service:
                name: sorry-service
                port:
                  number: 3000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-web-service
                port:
                  number: 3000
